# ez-web3-rpc-rs

./: Cargo.toml  LICENSE  README.md  build.rs
benchmarks/results/: bench-100-10iter-2025-08-24T17-04-45.442383699+00-00.md  bench-100-20iter-2025-08-24T17-10-27.456060300+00-00.md
examples/: gnosis_latency.rs  modernized_usage.rs
src/: calls.rs  chainlist.rs  error.rs  handler.rs  jsonrpc.rs  lib.rs  rpc_service.rs  types.rs
src/config/: mod.rs  resolve_config.rs
src/performance/: measure.rs  mod.rs  pick_fastest.rs
src/provider/: create_provider.rs  mod.rs  retry_proxy.rs
src/rpc/: mod.rs  select_base_rpc_set.rs
src/strategy/: get_fastest.rs  get_first_healthy.rs  mod.rs
tests/: chainlist_tests.rs  rpc_handler_tests.rs  rpc_service_tests.rs  types_tests.rs  ws_vs_http_latency.rs
