[package]
name = "ez_web3_rpc"
version = "0.1.0"
edition = "2024"
description = "A high-performance, asynchronous Web3 RPC handler with automatic failover, latency tracking, and smart RPC selection"
license = "MIT"
repository = "https://github.com/keyrxng/ez-web3-rpc-rust"
homepage = "https://github.com/keyrxng/ez-web3-rpc-rust"
documentation = "https://docs.rs/ez-web3-rpc"
keywords = ["web3", "rpc", "ethereum", "blockchain", "async"]
categories = ["api-bindings", "asynchronous", "web-programming"]
authors = ["keyrxng"]
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
dashmap = "6.1.0"
futures = "0.3.31"
parking_lot = "0.12.4"
reqwest = { version = "0.12.23", features = ["json"]}
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "alloc"] }

[build-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
